WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289207
REGRESSION (
291403@main
): [ macOS wk2 ] storage/filesystemaccess/writable-file-stream-abort.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=289207
Summary
REGRESSION (291403@main): [ macOS wk2 ] storage/filesystemaccess/writable-fil...
Karl Rackler
Reported
2025-03-05 17:16:40 PST
Description: storage/filesystemaccess/writable-file-stream-abort.html This issue can be bisected to
291403@main
using the command: run-webkit-tests --debug --iterations 50 --force --no-retry storage/filesystemaccess/writable-file-stream-abort.html
291404@main
--> Crashed
291403@main
--> Crashed
291402@main
--> Passed
291401@main
--> Passed History:
https://results.webkit.org/?suite=layout-tests&test=storage%2Ffilesystemaccess%2Fwritable-file-stream-abort.html&platform=mac
Crash Log: No crash log found for com.apple.WebKit.Networking.Development:57023. stdout: stderr: 2025-03-05 16:55:52.269 WebKitTestRunner[57017:3836467] +[IMKClient subclass]: chose IMKClient_Legacy ASSERTION FAILED: decoder->isValid() /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Source/WebKit/Platform/IPC/Connection.cpp(480) : void IPC::Connection::dispatchMessageReceiverMessage(MessageReceiver &, UniqueRef<Decoder> &&) 1 0x135834830 IPC::Connection::dispatchMessageReceiverMessage(IPC::MessageReceiver&, WTF::UniqueRef<IPC::Decoder>&&) 2 0x135841eb4 IPC::WorkQueueMessageReceiverQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'()::operator()() 3 0x135841c14 WTF::Detail::CallableWrapper<IPC::WorkQueueMessageReceiverQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'(), void>::call() 4 0x107bce608 WTF::Function<void ()>::operator()() const 5 0x107d18ce0 WTF::SuspendableWorkQueue::dispatch(WTF::Function<void ()>&&)::$_0::operator()() const 6 0x107d18bfc WTF::Detail::CallableWrapper<WTF::SuspendableWorkQueue::dispatch(WTF::Function<void ()>&&)::$_0, void>::call() 7 0x107bce608 WTF::Function<void ()>::operator()() const 8 0x107d9dc78 WTF::(anonymous namespace)::DispatchWorkItem::operator()() 9 0x107d9ca50 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 10 0x180df0658 _dispatch_client_callout 11 0x180df7c60 _dispatch_lane_serial_drain 12 0x180df8768 _dispatch_lane_invoke 13 0x180e037e8 _dispatch_root_queue_drain_deferred_wlh 14 0x180e03034 _dispatch_workloop_worker_thread 15 0x180f9f3d8 _pthread_wqthread 16 0x180f9e0f0 start_wqthread com.apple.WebKit.Networking.Development terminated (pid 57023) for reason: crash LEAK: 1 WebPageProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-05 17:16:50 PST
<
rdar://problem/146342345
>
EWS
Comment 2
2025-03-05 17:41:45 PST
Test gardening commit
291670@main
(1cd054132957): <
https://commits.webkit.org/291670@main
> Reviewed commits have been landed. Closing PR #41964 and removing active labels.
Darryl
Comment 3
2025-03-06 10:02:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/42013
EWS
Comment 4
2025-03-06 16:28:08 PST
Committed
291744@main
(e9441d8e7aee): <
https://commits.webkit.org/291744@main
> Reviewed commits have been landed. Closing PR #42013 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug