REGRESSION (291403@main): [ macOS wk2 ] storage/filesystemaccess/writable-file-stream-abort.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=289207 rdar://146342345

Reviewed by Sihui Liu.

NetworkStorageManager::startReceivingMessageFromConnection is responsible for setting up a
MessageReceiver as well as dispatching a message to add an entry into m_preferencesForConnection.
By setting up the MessageReceiver first and then dispatching the call to update
`m_preferencesForConnection`, there's a race where a message can be received and lookup it's
SharedPreferences before they are set. This is fixed by setting `m_preferencesForConnection`
before setting up the MessageReceiver.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::startReceivingMessageFromConnection):

Canonical link: https://commits.webkit.org/291744@main